# assignment_foundation_integration_afshin

./: .gitignore  README.md
foundation_model/: Dockerfile  Dockerfile.Jetson  docker-compose-jetson.yml  docker-compose.yml  pyproject.toml
foundation_model/config/: lerobot-act.yaml  lerobot-pi0.yaml  lerobot-smolvla.yaml
foundation_model/src/configs/: lerobot_extra_configs.py
foundation_model/src/dataloader/: flex_dataset.py
foundation_model/src/inference/: MotorState.py  check_rostopic.py  inference.py  inference_client.py  inference_profiler.py  inference_server.py  inference_thread.py  measure_timer.py  position_reset.py  rosif.py  show_observations.py
foundation_model/src/inference/backend/: backend.py  lerobot.py
foundation_model/src/vision/: preprocess.py
ros/: Dockerfile  docker-compose.yml
ros/scripts/: analyze_joint.py  analyze_joint.sh  comparison_report.txt  plot.py  plot_2.py
